sound: Avoid polling for non-existent directory

Create the user sound theme directory if it doesn't exist,
to avoid GLib polling. Also make sure that the system directories
exist before monitoring them for the same reason

https://bugzilla.gnome.org/show_bug.cgi?id=694134